--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 <body>
 
   <center><h2>CHARAK PHARMA PVT. LTD.</h2>
-  <h3>PHARMA DIVISION - 29-09-2025</h3>
+  <h3>PHARMA DIVISION - 1-12-2025</h3>
 
   <!-- 🔎 Search Box -->
   <input type="text" id="searchBox" placeholder="Search product..." onkeyup="searchTable()"></center>
@@ -422,6 +422,14 @@
           <td>156.00</td>
           <td>118.86</td>
         </tr>
+<tr>
+          <td>30049011</td>
+          <td>M2TONE FORTE 300ML</td>
+          <td>2.50</td>
+          <td>2.50</td>
+          <td>250.00</td>
+          <td>187.50</td>
+        </tr>
         <tr>
           <td>30049011</td>
           <td>M2TONE 200ML</td>
@@ -435,7 +443,7 @@
           <td>M2TONE 450ML</td>
           <td>2.50</td>
           <td>2.50</td>
-          <td>262.00</td>
+          <td>263.00</td>
           <td>199.62</td>
         </tr>
         <tr>
