--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         </tr>
 		<tr>
           <td>30049011</td>
-          <td>MANOLL M400</td>
+          <td>MANOLL SYRUP 400GM</td>
           <td>2.50</td>
           <td>2.50</td>
           <td>206.00</td>
